Remove the need to store prefix and suffix of each chunk
This has the following benefits:
* Chunks in the store are smaller
* Import and export are faster
* We can remove start and end position from ChunkMeta, so
  we will later be able to reuse ChunkMeta objects for similar
  chunks